--- a/templates/WellBeing.html
+++ b/templates/WellBeing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="image/favicon.ico" type="image/png"/>
+	<link rel="shortcut icon" href="/Static/image/favicon.ico" type="image/png"/>
 	<title>WellBeing </title>
    
 	<!-- aos css file cdn link  -->
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </head>
 <body>
@@ -42,7 +42,7 @@
 <section class="home" id="home" >
 	
 	<div class="image" data-aos="fade-right">
-        <img src="image/breast-cancer.svg" alt="">
+        <img src="{{ url_for('static', filename='image/breast-cancer.svg') }}" alt="">
     </div>
 
     <div class="content" data-aos="fade-left">
@@ -66,7 +66,7 @@
 
         <div class="image" data-aos="fade-right">
             
-            <img src="image/Laboratory.png" alt="" align="right">
+            <img src="{{ url_for('static', filename='image/Laboratory.png') }}" alt="" align="right">
         </div>
 
         <div class="content" data-aos="fade-left">
@@ -92,7 +92,7 @@
     <div class="row" data-aos="flip-down">
 
         <div class="image">
-            <img src="image/research.svg" alt="">
+            <img src="{{ url_for('static', filename='image/research.svg') }}" alt="">
         </div>
 
         <form action="">
@@ -140,7 +140,7 @@
 
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
 <script>
 
