Revert "front-edits3"
This reverts commit b82bed077f0127f1c0de5fa5a1b3e7d7e7b03d31.

--- a/Static/css/style.css
+++ b/Static/css/style.css
@@ -94,31 +94,14 @@ section:nth-child(even){
     background: #fff;
 }
 
-.header .image{
-    flex:1 1 45rem;
-    box-align: right;
-}
-.header .image img{
-    float: left;
-    width: 45px;
-    height: 45px;
-}
-.header h1{
-    font-size: 3rem;
-    position: relative;
-    top: 2px;
-    left: -8px;
-}
-    
-
-/* .header .logo{
+.header .logo{
     font-size: 2.5rem;
     color: var(--black);
 }
 
 .header .logo i{
     color: var(--pink);
-} */
+}
 
 .header .navbar a{
     font-size: 1.7rem;
@@ -169,12 +152,6 @@ section:nth-child(even){
 .home .content h3{
     font-size: 5.5rem;
     color:var(--black);
-    line-height: 1.8;
-    text-shadow: var(--text-shadow);
-}
-.home .content h2{
-    font-size: 4rem;
-    color:  var(--black);
     line-height: 1.8;
     text-shadow: var(--text-shadow);
 }
