Revert "Revert "front-edits3""
This reverts commit 4321fd29abaee89dcd45b6d7a7ddc0dcc34c5288.

--- a/templates/WellBeing.html
+++ b/templates/WellBeing.html
@@ -22,9 +22,11 @@
 <!-- header section starts  -->
 
 <header class="header"  data-aos="zoom-out">
-
-    <a href="#" class="logo"><i class="fas  fa-user-md"></i> WellBeing </a>
-
+    <!-- <a href="#" class="logo"><i class="fas  fa-user-md"></i> WellBeing </a> -->
+    <div class="image">
+        <img src="{{ url_for('static', filename='image/Cancer-LogoPNG.png') }}" alt="logo" />
+        <h1> WellBeing </h1>
+    </div>
     <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -46,6 +48,7 @@
     </div>
 
     <div class="content" data-aos="fade-left">
+        <h2> <span1>B</span1>reast <span1>C</span1>ancer <span1>D</span1>etection</h2>
         <h3>Early <span1> Detection </span1> </h3>
         <h3> For Your <span1> Protection </span1></h3>
         <p></p>
@@ -150,9 +153,17 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Contact Info.</h3>
-            <a href="#footer"> <i class="fas fa-phone"></i> +20 100-2227890 </a>
-            <a href="#footer"> <i class="fas fa-envelope"></i> team26@gmail.com </a>
+            <a href="#footer"> <i class="fas fa-phone"></i> +20 100-000-0000 </a>
+            <a href="#footer"> <i class="fas fa-envelope"></i> team26@wellbeing.com </a>
             <a href="#footer"> <i class="fas fa-map-marker-alt"></i> Cairo, Egypt  </a>
+        </div>
+
+        <div class="box" data-aos="fade-up">
+            <h3>Our Team</h3>
+            <a href="#footer"> <i class="fa fa-id-card"></i>  Omar Anwar </a>
+            <a href="#footer"> <i class="fa fa-id-card"></i>  Mahmoud Yaser </a>
+            <a href="#footer"> <i class="fa fa-id-card"></i>  Mayar Ehab </a>
+            <a href="#footer"> <i class="fa fa-id-card"></i>  Maye Khaled </a>
         </div>
 
     </div>
