--- a/templates/WellBeing.html
+++ b/templates/WellBeing.html
@@ -96,7 +96,7 @@
 
         <div class="box" data-aos="fade-up">
             <h3>Contact Info.</h3>
-            <a href="#footer"> <i class="fas fa-phone"></i> +20 100-2227890 </a>
+            <a href="#footer"> <i class="fas fa-phone"></i> +20 112-333-3079 </a>
             <a href="#footer"> <i class="fas fa-envelope"></i> team26@gmail.com </a>
             <a href="#footer"> <i class="fas fa-map-marker-alt"></i> Cairo, Egypt  </a>
             
