--- a/templates/result.html
+++ b/templates/result.html
@@ -66,11 +66,11 @@
                 <!-- onsubmit="myfunction( output )" -->
                 <h3> Check your Results</h3>
     
-                <input type="text" placeholder="Your Name" class="box" name="name" >
-                <input type="number" placeholder="Perimeter  Worst" class="box" name="Perimeter" required max="402" min="20" step="0.0001">
-                <input type="number" placeholder="Area Worst" class="box" name="Area" required max="6808" min="73" step="0.0001">
-                <input type="number" placeholder="Radius Worst" class="box" name="Radius" required max="58" min="3" step="0.0001">
-                <input type="number" placeholder="Concave Points Worst" class="box" name="Concave_Points" required max="0.5" min="0" step="0.0001">
+                <input type="text" placeholder="Username" class="box" name="name" >
+                <input type="number" placeholder="Perimeter Worst  ~Ex: 103.961111" class="box" name="Perimeter" required max="402" min="20" step="0.0001">
+                <input type="number" placeholder="Area Worst  ~Ex: 820.704848" class="box" name="Area" required max="6808" min="73" step="0.0001">
+                <input type="number" placeholder="Radius Worst  ~Ex: 15.846776" class="box" name="Radius" required max="58" min="3" step="0.0001">
+                <input type="number" placeholder="Concave Points Worst  ~Ex: 0.106625" class="box" name="Concave_Points" required max="0.5" min="0" step="0.0001">
                 <input type="submit" value="Check" class="btn">
                 <!-- -->
             </form>
